# Simple-Collision-Avoidance-Simulation-in-Gazebo

./: LABGROUP.md  README.md
control_barrel_world/: CMakeLists.txt  package.xml
control_barrel_world/include/control_barrel_world/: control_barrel_world.h
control_barrel_world/launch/: solution.launch
control_barrel_world/src/: control_barrel_world.cpp  control_barrel_world_node.cpp
opencv_person_detector/: CMakeLists.txt  package.xml
opencv_person_detector/include/opencv_person_detector/: opencv_person_detector.h
opencv_person_detector/src/: opencv_person_detector.cpp  opencv_person_detector_node.cpp
pcl_obstacle_detector/: CMakeLists.txt  package.xml
pcl_obstacle_detector/include/pcl_obstacle_detector/: pcl_obstacle_detector.h
pcl_obstacle_detector/src/: pcl_obstacle_detector.cpp  pcl_obstacle_detector_node.cpp
