<?xml version="1.0"?>
<package format="2">
  <name>control_barrel_world</name>
  <version>0.0.0</version>
  <description>The control_barrel_world package</description>

  <maintainer email="c.xu-7@student.tudelft.nl">kyle-xu</maintainer>
  <maintainer email="l.sui@student.tudelft.nl">liangchensui</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>prius_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>prius_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>prius_msgs</exec_depend>


  <export>


  </export>
</package>
